# sunshine-dashboard

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/issue_report_dashboard/: app.py
src/sunshine_dashboard/: __init__.py  app.py  fetch.py
static/: style.css
templates/: index.html
