[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunshine_dashboard"
version = "0.1.0"
description = "Visual dashboard for GitHub issue reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
sunshine-dashboard = "sunshine_dashboard.app:main"

[tool.fastapi]
entrypoint = "src.sunshine_dashboard.app:app"
